unpackaged/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Encountered_Error_During_Batch__c.field-meta.xml
<CustomField>
    <fullName>rh2__Encountered_Error_During_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encountered Error During Batch</label>
    <type>Checkbox</type>
</CustomField>