unpackaged/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Object_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>rh2__Object_Full_Name__c</fullName>
    <inlineHelpText>If the full object name does not fit in the "name" field, please put the full name of the object here (in all lower case)</inlineHelpText>
    <label>Full Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>