unpackaged/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Override__c.field-meta.xml
<CustomField>
    <fullName>rh2__Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>