unpackaged/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Query_Error_Encountered__c.field-meta.xml
<CustomField>
    <fullName>rh2__Query_Error_Encountered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Query Error During Batch</label>
    <type>Checkbox</type>
</CustomField>