unpackaged/main/default/objects/rh2__Rollup_Helper_Record_Scope__c/fields/rh2__Rollups_Per_Async__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollups_Per_Async__c</fullName>
    <label>Rollups Per Asynchronous Request</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>